--- a/src/assets/slides.css
+++ b/src/assets/slides.css
@@ -6,7 +6,7 @@
   width: 100%;
 }
 .container .box {
-  padding: 0 30px;
+  padding: 0 50px 0 0;
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
